tests/toy/neg/001266_mutation.toylang
program a = { sleep while a do sleep; } .
